<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TYSubwayZZ</string>
    <string name="action_settings">Settings</string>
    
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    
    <string name="administrator">管理员</string>
    <string name="patrol_management">巡查管理</string>
    <string name="check_management">检查管理</string>
    <string name="monitor_management">地铁结构监测管理</string>
    <string name="protect_management">安保区监护工程管理</string>
    <string name="line_management">地铁线路信息</string>
    <string name="protect_info_management">安保区监护工程信息</string>
 	<string name="search">在线查找</string>
 	
 	  <!-- pull 2 refresh -->
    <string name="pull_to_refresh_pull_down_label">滑动刷新</string>
    <string name="pull_to_refresh_release_label">释放刷新</string>
    <string name="pull_to_refresh_refreshing_label">加载中</string>
    <string name="pull_to_refresh_tap_label">点击刷新</string>
    
 	<string name="userName">用户名</string>
 	<string name="password">密码</string>
 	<string name="login">登	陆</string>
 	<string name="rememberPwd">记住密码</string>
 	
 	<string name="start_analyze">开始分析</string>
 	<string name="base_object_analyze">"  基础对象分析"</string>
 	<string name="facility_object">"  设施设备对象"</string>
 	<string name="check_task_object">"  检查任务对象"</string>
 	
 	<string name="base_object_chose">基础对象选择</string>
 	<string name="base_Range_chose">基础范围选择</string>
 	<string name="monitor_object_chose">监测项目选择</string>
 	
 	<string name="base_info">基本信息</string>
 	<string name="design_files">设计文件</string>
 	<string name="reconnance_files">勘察文件</string>
 	<string name="implement_files">实施文件</string>
 	<string name="photo_files">图片文件</string>
 	
 	<string name="projectName">项目名称</string>
 	<string name="projectClass">监护项目等级</string>
 	<string name="foundationPitClass">基坑等级</string>
 	<string name="redLineDistance">红线边线距离</string>
 	<string name="digArea">开挖面积</string>
 	<string name="longitude">x(经度)</string>
 	<string name="latitude">y(纬度)</string>
 	<string name="constructionCompany">建设单位</string>
 	<string name="constructionBy">施工单位</string>
 	<string name="detectionCompany">检测单位</string>
 	<string name="designCompany">设计单位</string>
 	<string name="supervisorCompany">监理单位</string>
 	<string name="surveyCompany">勘察单位</string>
 	<string name="startTime">开工日期</string>
	<string name="endTime">竣工日期</string>
	<string name="createTime">创建时间</string>
	<string name="projectAddress">工程地址</string>
	
	
	<string name="read">查看</string>
	<string name="change_line">切换线路</string>
	
	<string name="descr_image">Image</string> 
	<string name="intervalName">区间名称</string>
	<string name="intervalCode">区间编码</string>
	<string name="monitor_data_table">监测数据图表 </string>
	<string name="monitor_checking_points">测点数据</string>
	
	
	<string name="local_curve">本次曲线</string>
	<string name="accumulate_curve">累计曲线</string>
	
</resources>
