<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/common_detail_menu_corners"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnBaseInfo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:text="@string/base_info"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnDesginFile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:background="@color/detail_menu_normal_bg"
            android:text="@string/design_files"
            android:textColor="@color/detail_menu_prees_bg" />

        <Button
             android:id="@+id/btnReconnanceFile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:background="@color/detail_menu_normal_bg"
            android:text="@string/reconnance_files"
            android:textColor="@color/detail_menu_prees_bg" />

        <Button
            android:id="@+id/btnImplementFile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:background="@color/detail_menu_normal_bg"
            android:text="@string/implement_files"
            android:textColor="@color/detail_menu_prees_bg" />

        <Button
            android:id="@+id/btnPhotoFile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:background="@color/detail_menu_normal_bg"
            android:text="@string/photo_files"
            android:textColor="@color/detail_menu_prees_bg" />
    </LinearLayout>

</LinearLayout>