<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:orientation="horizontal" 
    android:background="@drawable/common_detail_menu_corners"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp">
        <Button 
            android:id="@+id/menu_base_info_btn"
            android:layout_width="match_parent"
        	android:layout_height="match_parent"
        	android:layout_weight="1"
        	android:layout_marginLeft="2dp"
        	android:layout_marginTop="2dp"
        	android:layout_marginBottom="2dp"
            android:text="@string/base_info"
            android:background="@color/transparent"
            android:textColor="@color/white"
            />
        <Button 
            android:id="@+id/menu_design_files_btn"
            android:layout_width="match_parent"
        	android:layout_height="match_parent"
        	android:layout_weight="1"  
            android:background="@color/detail_menu_normal_bg"
            android:layout_marginTop="2dp"
        	android:layout_marginBottom="2dp"
        	android:text="@string/design_files"
        	android:textColor="@color/detail_menu_prees_bg"
            />
        <Button 
            android:id="@+id/menu_reconnance_files_btn"
            android:layout_width="match_parent"
        	android:layout_height="match_parent"
        	android:layout_weight="1"
            android:background="@color/detail_menu_normal_bg"
            android:layout_marginTop="2dp"
        	android:layout_marginBottom="2dp"
        	android:text="@string/reconnance_files"
        	android:textColor="@color/detail_menu_prees_bg"
            />
        <Button 
            android:id="@+id/menu_implement_files_btn"
            android:layout_width="match_parent"
        	android:layout_height="match_parent"
        	android:layout_weight="1"
            android:background="@color/detail_menu_normal_bg"
            android:layout_marginTop="2dp"
        	android:layout_marginBottom="2dp"
        	android:layout_marginRight="2dp"
        	android:text="@string/implement_files"
        	android:textColor="@color/detail_menu_prees_bg"
            />
</LinearLayout>
